--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon index.js",
-    "start": "node index.js"
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -21,11 +20,10 @@
   "homepage": "https://github.com/christinakal/node-auth1-project#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "connect-session-knex": "^1.5.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "express-session": "^1.17.0",
     "knex": "^0.20.10",
-    "nodemon": "^2.0.2",
+    "knex-cleaner": "^1.3.0",
     "sqlite3": "^4.1.1"
   }
 }
